--- a/reused_flutter/pubspec.yaml
+++ b/reused_flutter/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.3
+  firebase_core: ^1.17.1
+  firebase_auth: ^3.3.19
+  firebase_storage: ^10.2.17
 
 dev_dependencies:
   flutter_test:
