--- a/reused_flutter/pubspec.yaml
+++ b/reused_flutter/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^1.17.1
   firebase_auth: ^3.3.19
   firebase_storage: ^10.2.17
+  cloud_firestore: ^3.1.17
 
 dev_dependencies:
   flutter_test:
