--- a/reused_flutter/pubspec.yaml
+++ b/reused_flutter/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_storage: ^10.2.17
   cloud_firestore: ^3.1.17
   uuid: ^3.0.6
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
