Test for dependencies in Super-Linter

--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -35,6 +35,12 @@ jobs:
     # Load all steps #
     ##################
     steps:
+      ############################
+      # Install all dependencies #
+      ############################
+      - run: flutter pub get
+      # - run: dart analyze
+      
       ##########################
       # Checkout the code base #
       ##########################
