--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -35,6 +35,10 @@ jobs:
     # Load all steps #
     ##################
     steps:
+      - run: cd reused_flutter/
+      - run: flutter pub get
+      - run: flutter analyze
+    
       ##########################
       # Checkout the code base #
       ##########################
@@ -50,6 +54,6 @@ jobs:
       - name: Lint Code Base
         uses: github/super-linter@v4
         env:
-          VALIDATE_ALL_CODEBASE: false
+          VALIDATE_ALL_CODEBASE: true
           DEFAULT_BRANCH: master
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
