--- a/.github/workflows/dart-linter.yaml
+++ b/.github/workflows/dart-linter.yaml
@@ -2,7 +2,7 @@ name: Dart
 
 on:
   push:
-    branches: [ 'develop' ]
+    branches: [ 'develop', 'linter_setup' ]
   pull_request:
     branches: [ 'main', 'develop' ]
 
@@ -17,6 +17,7 @@ jobs:
           flutter-version: '3.0.2'
           channel: 'stable'
       - run: flutter --version
+      - run: cd /home/runner/work/ReusEdAppG7/ReusEdAppG7/reused_flutter
 
       - name: Install dependencies
         run: dart pub get
