--- a/.github/workflows/dart-linter.yaml
+++ b/.github/workflows/dart-linter.yaml
@@ -17,10 +17,9 @@ jobs:
           flutter-version: '3.0.2'
           channel: 'stable'
       - run: flutter --version
-      - run: cd /home/runner/work/ReusEdAppG7/ReusEdAppG7/reused_flutter
 
       - name: Install dependencies
-        run: dart pub get
+        run: flutter pub get /reused_flutter
 
       - name: Verify formatting
         run: dart format --output=none --set-exit-if-changed .
