--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,10 @@
 sonar.projectKey=InnoSWP_ReusEdAppG7
 sonar.organization=innoswp
 
+sonar.c.file.suffixes=-
+sonar.cpp.file.suffixes=-
+sonar.objc.file.suffixes=-
+
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=ReusEdAppG7
 #sonar.projectVersion=1.0
