--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,11 +6,11 @@ sonar.cpp.file.suffixes=-
 sonar.objc.file.suffixes=-
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=ReusEdAppG7
-#sonar.projectVersion=1.0
+sonar.projectName=ReusEdAppG7
+sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+sonar.sources=.
 
 # Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
