--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,9 @@
 name: Build
 on:
   push:
-    branches:
-      - main
+    branches: ['main']
   pull_request:
-    types: [opened, synchronize, reopened]
+    branches: ['main']
 jobs:
   sonarcloud:
     name: SonarCloud
