Patch - Change source for Sonar Cloud

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,7 +10,7 @@ sonar.objc.file.suffixes=-
 # sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-# sonar.sources=.
+sonar.sources=\reused_flutter\lib
 
 # Encoding of the source code. Default is default system encoding
 # sonar.sourceEncoding=UTF-8
