--- a/.github/workflows/dart-linter.yaml
+++ b/.github/workflows/dart-linter.yaml
@@ -2,7 +2,7 @@ name: Dart
 
 on:
   push:
-    branches: [ 'develop' ]
+    branches: [ 'main', 'develop' ]
   pull_request:
     branches: [ 'main', 'develop' ]
 
